2008-06-29  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-never-report): 1.158 updated list of
	variables which are not included in the report

2008-06-24  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-lsact-activity): new structure slot: HEADLINE
	(ucm-lsact-activity-pp): only print the headline
	(ucm-lsact-create-ewoc): fetch the activity headline when creating
	an ucm-lsact-activity structure instance.
	(ucm-list-activities): use `consp' instead if `listp' for checking
	if `current-prefix-arg' is a list (nil is a valid list according
	to `listp')

2008-06-14  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-create-activity-function): new variable
	(ucm-set-activity): use `ucm-create-activity-function' to create
	new activities.
	(ucm-lsact-unlock-activity-command): new function
	(ucm-lsact-mode-map): add binding for
	`ucm-lsact-unlock-activity-command'

2008-06-07  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-locked-activity-face)
	(ucm-obsolete-activity-face, ucm-set-activity-face): 1.30 new
	faces.
	(ucm-read-activity): 1.30 provide only the current users
	activities for completion.
	(ucm-read-activity): 1.30 wait for the transaction id of the lsact
	command.
	(ucm-lsact-ewoc, ucm-lsact-only-current-user)
	(ucm-lsact-include-obsolete): 1.30 new variables
	(ucm-lsact-activity-link-handler): 1.30 new function.
	(ucm-lsact-activity-link): 1.30 new button
	(ucm-lsact-activity): 1.30 new struct
	(ucm-lsact-pp-attributes): 1.30 new variable
	(ucm-lsact-activity-pp, ucm-lsact-create-ewoc)
	(ucm-lsact-refresh-command, ucm-lsact-toggle-mark-command)
	(ucm-lsact-set-activity-command): 1.30 new functions
	(ucm-lsact-mode-map): 1.30 new variable
	(ucm-lsact-mode): 1.30 new mode
	(ucm-list-activities): 1.30 new function
	(ucm-browse-activity): 1.30 use `switch-to-buffer-other-window'

2008-05-21  Alexandru Harsanyi  <haral@users.sourceforge.net>
