@@ -1,3 +1,10 @@
+2008-07-22  Alexandru Harsanyi  <haral@users.sourceforge.net>
+
+	* vc-clearcase.el only activate the clearcase backend on Emacs22
+	or earlier.
+	(clearcase-read-view-tag, clearcase-read-label): use
+	`try-completion' for any value of FLAG in completing-read.
+
 2008-06-29  Alexandru Harsanyi  <haral@users.sourceforge.net>
 
 	* vc-clearcase.el (clearcase-never-report): 1.158 updated list of
